# MarkDown-Rag

./: .gitignore
backend/: ConvertToMarkdown.py  EmbeddingManager.py  main.py  package-lock.json  package.json  pyproject.toml
backend/utils/: MarkDownUtils.py
backend/vector_db/Dương Huy Hoàng_.pdf/: chroma.sqlite3
backend/vector_db/a-practical-guide-to-building-agents/: chroma.sqlite3
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/files/: route.tsx
frontend/src/app/api/files/: route.tsx
frontend/src/app/chat/files/[filename]/: page.tsx
frontend/src/app/files/: page.tsx
frontend/src/components/: examples.tsx  file-action-dropdown.tsx  file-select-dropdown.tsx  files-select.tsx  files-table.tsx  logo.tsx  navbar.tsx  upload-button.tsx
frontend/src/components/chat/: chat-bottombar.tsx  chat-list.tsx  chat-support.tsx  chat-topbar.tsx  chat.tsx
frontend/src/components/providers/: root-provider.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: use-chat-store.tsx  use-current-file.tsx  use-file-name.tsx  useChatStore.tsx
